src/test/ui/parser/issue-14303-fncall.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-fncall.rs:4:31
   |
LL |     .collect::<Vec<'a, usize, 'b>>()
   |                               ^^

error: aborting due to previous error

